Fixing nav menu and layout on safari

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ License URI: http://opensource.org/licenses/MIT and http://www.gnu.org/licenses/
 	.bio {
 		margin-bottom: 5px;
 		display: block;
+		overflow: hidden;
 	}
 
 	.author-name {
@@ -159,10 +160,14 @@ body {
 
 .prev-next-nav li {
 	list-style: none;
+	overflow: hidden;
+	width: 100%;
+	min-width: 100%;
 }
 
 .prev-next-nav .prev {
 	float: left;
+	text-align: left;
 	width: 50%;	
 }
 
